# ros2-robot-audition-suite

./: .gitignore  .gitmodules  README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/audition_data_collector/lib/audition_data_collector/: marker_navigator_node  recorder_node
ros2_ws/install/audition_data_collector/share/ament_index/resource_index/package_run_dependencies/: audition_data_collector
ros2_ws/install/audition_data_collector/share/ament_index/resource_index/parent_prefix_path/: audition_data_collector
ros2_ws/install/audition_data_collector/share/audition_data_collector/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/audition_data_collector/share/audition_data_collector/cmake/: audition_data_collectorConfig.cmake
ros2_ws/install/audition_msgs/include/audition_msgs/audition_msgs/action/detail/: collect_at_waypoint__rosidl_typesupport_introspection_c.h  collect_at_waypoint__rosidl_typesupport_introspection_cpp.hpp  collect_at_waypoint__struct.hpp  collect_at_waypoint__type_support.c
ros2_ws/install/audition_msgs/include/audition_msgs/audition_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp
ros2_ws/install/audition_msgs/include/audition_msgs/audition_msgs/msg/detail/: collection_status__functions.c  collection_status__rosidl_typesupport_introspection_c.h  collection_status__rosidl_typesupport_introspection_cpp.hpp  collection_status__struct.hpp
ros2_ws/install/audition_msgs/include/audition_msgs/audition_msgs/srv/: abort_session.hpp
ros2_ws/install/audition_msgs/include/audition_msgs/audition_msgs/srv/detail/: abort_session__type_support.h  proceed_to_next__rosidl_typesupport_introspection_cpp.hpp  proceed_to_next__struct.h  proceed_to_next__traits.hpp
ros2_ws/install/audition_msgs/share/audition_msgs/: package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/audition_msgs/share/audition_msgs/action/: CollectAtWaypoint.action
ros2_ws/install/audition_msgs/share/audition_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  audition_msgsConfig.cmake  audition_msgs__rosidl_typesupport_cExport.cmake  audition_msgs__rosidl_typesupport_cppExport-noconfig.cmake  audition_msgs__rosidl_typesupport_cppExport.cmake  audition_msgs__rosidl_typesupport_introspection_cExport.cmake  audition_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_audition_msgs__rosidl_generator_cExport.cmake  export_audition_msgs__rosidl_generator_pyExport-noconfig.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros2_ws/install/audition_msgs/share/audition_msgs/srv/: AbortSession.idl
ros2_ws/log/: latest_build
ros2_ws/maps/: room_map.pgm  room_map.yaml
ros2_ws/src/audition_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/audition_bringup/launch/: bringup.launch.py  collection_session.launch.py  nav2.launch.py
ros2_ws/src/audition_data_collector/: CMakeLists.txt  package.xml
ros2_ws/src/audition_data_collector/scripts/: acoustic_recorder.py
ros2_ws/src/audition_data_collector/src/: collection_node.cpp  collector.cpp  controller.cpp  handler.cpp  intervention_server_node.cpp  marker_navigator_node.cpp  recorder.cpp  recorder_node.cpp  waypoint.cpp  waypoint_manager_node.cpp
ros2_ws/src/audition_hardware/: CMakeLists.txt  package.xml
ros2_ws/src/audition_hardware/launch/: hardware_test.launch.py
ros2_ws/src/audition_hardware/src/: cmd_vel_relay.cpp  hardware_bridge.cpp  motor_test.cpp
ros2_ws/src/audition_msgs/: CMakeLists.txt
ros2_ws/src/audition_sim/: CMakeLists.txt  package.xml
ros2_ws/src/audition_sim/config/: acoustic_params.yaml  nav2_params.yaml  sim.rviz  sim_waypoints.yaml
ros2_ws/src/audition_sim/launch/: sim.launch.py
ros2_ws/src/audition_sim/urdf/: robot.urdf.xacro
ros2_ws/src/audition_sim/worlds/: room.world
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/install/audition_msgs/include/audition_msgs/audition_msgs/action/detail/: collect_at_waypoint__functions.c  collect_at_waypoint__functions.h  collect_at_waypoint__rosidl_typesupport_fastrtps_cpp.hpp  collect_at_waypoint__type_support.h
ros2_ws/src/install/audition_msgs/include/audition_msgs/audition_msgs/msg/: collection_status.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h
ros2_ws/src/install/audition_msgs/include/audition_msgs/audition_msgs/msg/detail/: collection_status__builder.hpp
ros2_ws/src/install/audition_msgs/include/audition_msgs/audition_msgs/srv/: proceed_to_next.h  proceed_to_next.hpp
ros2_ws/src/install/audition_msgs/include/audition_msgs/audition_msgs/srv/detail/: abort_session__rosidl_typesupport_introspection_cpp.hpp  abort_session__struct.h  abort_session__struct.hpp  abort_session__traits.hpp  proceed_to_next__builder.hpp  proceed_to_next__rosidl_typesupport_fastrtps_c.h  proceed_to_next__struct.hpp  proceed_to_next__type_support.c  proceed_to_next__type_support.hpp
ros2_ws/src/install/audition_msgs/share/audition_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh
ros2_ws/src/install/audition_msgs/share/audition_msgs/action/: CollectAtWaypoint.idl
ros2_ws/src/install/audition_msgs/share/audition_msgs/cmake/: audition_msgs__rosidl_typesupport_cExport.cmake  audition_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  export_audition_msgs__rosidl_generator_pyExport.cmake  export_audition_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_audition_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros2_ws/src/install/audition_msgs/share/audition_msgs/msg/: CollectionStatus.idl
ros2_ws/src/install/audition_msgs/share/audition_msgs/srv/: ProceedToNext.srv
ros2_ws/src/log/: latest_build
